# hxx

./: Cargo.toml  README.md  diff.sh  test.sh
flag_macro/: Cargo.toml
flag_macro/src/: lib.rs
hxx/: Cargo.toml
hxx/src/: main.rs
src/: config.rs  flag.rs  hex.rs  lib.rs  main.rs
